--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,24 +11,28 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
         tools:targetApi="31">
         <activity
+            android:name=".PreviousQuizActivity"
             android:theme="@style/Theme.SCQuizNew"
-            android:name=".QuizResultActivity"
-            android:exported="false"
-            android:parentActivityName=".MainActivity"
-            >
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:theme="@style/Theme.SCQuiz"
+            android:name=".QuizResultActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/Theme.SCQuizNew">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true"
-
-            >
+            android:theme="@style/Theme.SCQuiz">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
